2006-03-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py (_ComboEntryPopup.popup): 
	Set the height on the treeview instead of the popup window.

=== 1.9.7 ===
2006-03-11  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

2006-03-07  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dateentry.py:
	* kiwi/ui/entry.py:
	* kiwi/ui/widgets/entry.py:

	Make sure the width of the dateentry is not longer than
	it needs to be, don't expand at all.

2006-03-06  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.py:
	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/hyperlink.py:

	Add gazpacho support for hyperlink.	

2006-03-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/component.py: 
	(get_utility): Add limited support for zope.interfaces.

2006-03-05  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/dateentry.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/widgets/entry.py:
	* tests/test_dateentry.py:

	Add a DateEntry which has a toggle button that popups a calendar.

2006-03-05  Johan Dahlin  <jdahlin@async.com.br>

	* setup.py (version): Use the new features

	* kiwi/dist.py: Add support for $sysconfdir and add an install_data
	subclass which replaces variables. Fetch name from distribution object
	instead of subclass. Refactoring and cleanups

2006-03-02  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (_IntConverter.as_string): 
	Do not use a locale specific way of formatting integers.
	
	* tests/test_datatypes.py (IntTest.testAsStringUS) 
	(IntTest.testAsStringUS): Add a test

2006-03-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.remove): Add an optional select 
	argument to be consistent with append.

	* kiwi/ui/widgets/radiobutton.py (RadioButton._on_group_changed): 
	Emit content changed when any radio button in the group changes

2006-02-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combo.py: